PR/14558: Tero Kivinen: There is no point in limiting the number of seconds to 100 million. Use 1000 million like the man page for nanosleep suggests. This is much closer to MAXINT, and it conforms to POSIX.